--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header><b>developed by Ratnesh patel</b></header>
+   <header><b id="b1">developed by Ratnesh patel</b></header>
 
     <!-- section-----1 -->
      <section class="pimg1">
 
             <div>
-               <span class="textbg">PARALLAX Website </span>
+               <span class="textbg">PARALLAX </span>
             </div>
 
      </section>   
@@ -43,7 +43,7 @@
      <section class="pimg2">
 
       <div>
-         <span class="textbg"> <b> Explore Nature </b></span>
+         <span class="textbg"> <b> Explore </b></span>
       </div>
 
       </section>   
@@ -67,7 +67,8 @@
   </section>   
   
   <section class="sec2">
-     <h1 >Look Deep Into Nature</h1>
+     <h1 >Look Deep </h1>
+      <h1>into nature</h2>
      <p>
         look deep into nature and then you will understand everything better ---by Albert Einstein
      </p>
