--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       <!-- section-------4 -->
       <section class="pimg3">
          <div>
-            <span class="textbg">LOOK, DEEP INTO NATURE </span>
+            <span class="textbg"> DEEP INTO </span>
          </div>
   </section>   
   
   <section class="sec2">
-     <h1 >Look Deep </h1>
-      <h1>into nature</h2>
+     <h1 >Look Deep Into Nature </h1>
+      
      <p>
         look deep into nature and then you will understand everything better ---by Albert Einstein
      </p>
